@@ -46,10 +46,6 @@
 
 ;;; Development
 
-;;;; Tags
-
-(straight-use-package 'citre)
-
 ;;;; Copilot
 (straight-use-package 'copilot)
 
